--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   provider: ^6.0.1
   uuid: ^3.0.5
   cached_network_image: ^3.3.1
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
